fixed asterisk spacing

--- a/dataland-frontend/src/assets/scss/components/form.scss
+++ b/dataland-frontend/src/assets/scss/components/form.scss
@@ -542,7 +542,7 @@ input[type="checkbox"], input[type="radio"]{
     .asterisk:before {
       content: " ";
       display: inline-block;
-      width: .0275rem;
+      width: 0.25rem;
     }
   }
   p {
